--- a/docker-compose.yaml.example
+++ b/docker-compose.yaml.example
@@ -18,6 +18,6 @@ services:
     env_file:
       - .env
     volumes:
-      - ./data/postgres:/var/lib/postgresql/data
+      - ../data/postgres:/var/lib/postgresql/data
     ports:
       - "15432:5432"
